syntax = "proto3";

package jsgenerate_webpc.system;
option go_package = "github.com/powerpuffpenguin/webpc/protocol/system";

import "google/api/annotations.proto";

service System {
    // return version info
    rpc Version (VersionRequest) returns (VersionResponse){
        option (google.api.http) = {
            get: "/api/v1/system/version"
        };
    }
    // return server start at unix
    rpc StartAt (StartAtRequest) returns (StartAtResponse){
        option (google.api.http) = {
            get: "/api/v1/system/start_at"
        };
    }
}
message VersionRequest{
}
message VersionResponse{
    string platform = 1;
    string version = 2;
    string commit = 3;
    string date = 4;
}
message StartAtRequest{
}
message StartAtResponse{
    int64 result = 1;
}